# metagen

./: .gitignore  README.md  build.py  build.sh  config.py  esbuild.config.js  generate_stubs.py  launch.py  main.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pytest.ini  run-e2e-tests.sh  start_server.sh  tsconfig.json  version.json
agents/: __init__.py  agent_manager.py  base.py  meta_agent.py  task_execution_agent.py  tool_approval.py  tool_result_formatter.py  tool_tracker.py
agents/memory/: __init__.py  memory_backend.py  memory_manager.py  sqlite_backend.py
agents/safety/: __init__.py  iteration_handler.py  repetition_detector.py
api/: __init__.py  __version__.py  server.py  version.json
api/models/: __init__.py  auth.py  chat.py  common.py  system.py
api/routes/: auth.py  chat.py  memory.py  system.py  telemetry.py  tools.py
api/swift/: Package.swift  VERSION  openapi.json
api/ts/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
api/ts/src/: api.ts  errors.ts  index.ts  streaming.ts  types.ts  version.ts
api/ts/tests/: api.test.ts  chat.test.ts
auth/: __init__.py  base_auth.py  google_auth.py
cli/: README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.js  vitest.config.ts
cli/scripts/: ambient-cli.sh  build-macos.sh
cli/src/: index.d.ts  index.js  index.ts
cli/src/backend/: BackendManager.d.ts  BackendManager.js  BackendManager.ts  ProcessManager.d.ts  ProcessManager.js  ProcessManager.ts
cli/src/commands/: chat.d.ts  chat.js  chat.ts  chat.tsx  server.d.ts  server.js  server.ts  setup.d.ts  setup.js  setup.ts
cli/src/components/: App.d.ts  App.js  App.tsx  ChatInterface.d.ts  ChatInterface.js  ChatInterface.tsx  InputPrompt.d.ts  InputPrompt.js  Spinner.d.ts  Spinner.js  TextBuffer.d.ts  TextBuffer.js  ToolApprovalPrompt.d.ts  ToolApprovalPrompt.js  ToolApprovalPrompt.tsx
cli/src/hooks/: useKeypress.d.ts  useKeypress.js  useKeypress.ts  useMetagenStream.d.ts  useMetagenStream.js  useMetagenStream.ts
cli/src/types/: index.d.ts  (+2 more)
client/: __init__.py  agentic_client.py  anthropic_client.py  base_client.py  base_provider_client.py  factory.py  gemini_client.py  llm_client.py  mcp_server.py  models.py  openai_client.py  structured_client.py  types.py
common/: __init__.py  messages.py
common/models/: __init__.py  base.py  enums.py  memory.py  task.py  telemetry.py  types.py
common/types/: __init__.py  memory.py  task.py  tools.py
connectors/google/: __init__.py  base_service.py
db/: __init__.py  alembic.ini  base.py  engine.py  manager.py  memory_models.py  telemetry_models.py
db/alembic/: env.py
db/migrations/: env.py
macapp/: README.md  build.sh  create_project.sh  project.yml  setup_xcode_project.sh
macapp/Ambient/: AmbientApp.swift
memory/: __init__.py
memory/storage/: __init__.py  api.py  manager.py  memory_models.py  models.py  sqlite_backend.py  task_models.py  task_service.py
scripts/: build.js  bundle.js  generate_stubs_instructions.md  update_version.py
services/: __init__.py  memory_service.py  task_service.py
telemetry/: __init__.py  local_storage.py  sqlite_exporter.py  trace_analyzer.py
tests/: README.md  conftest.py
tests/agents/: __init__.py  test_agent_google_tools.py  test_agent_manager_sessions.py  test_agent_safety_with_llm.py  test_agent_tool_selection.py  test_meta_agent.py  test_safety_components.py  test_task_execution_agent.py  test_tool_approval.py  test_tool_tracker.py
tests/api/: conftest.py  test_auth.py  test_chat.py  test_chat_stream_e2e.py  test_system.py
tests/auth/: __init__.py  test_google_integration.py  test_google_oauth.py
tests/client/: test_agentic_client.py  test_factory.py  test_llm_client.py  test_provider_clients.py  test_structured_client.py
tests/db/: test_db_robustness.py  test_pydantic_json_type.py
tests/e2e/: test_task_subsystem_e2e.py
tests/integration/: test_integration.py  test_task_subsystem_integration.py
tests/storage/: test_database_robustness.py  test_storage_integration.py
tests/tools/: test_google_mcp.py  test_mcp.py  test_task_tools.py  test_tool_executor.py
tools/: __init__.py  base.py  mcp_server.py  registry.py  schemas.py
tools/auth/: __init__.py  oauth_handler.py
tools/connectors/: __init__.py  google_tools.py
tools/core/: __init__.py  file_tools.py  memory_tools.py  task_tools.py
(+84 files in other folders)
